		* Lua (deprecated functionality will still be available for a transition period):
			* Deprecated all get_* functions (except in Bitstream) in favour of functions without the "get_" part.
			* Deprecated colors specified as three parameters in favour of passing the result of the //color// function.
			* Deprecated //gfx_draw_box// in favour of the draw_box method in Bitmap.
	* OmfgScript:
		* Added //sync_shot// and //sync_reload// flag properties to weapons to improve and fix some netplay issues.
		* Added network_init property to particle scripts.
	* Fixed problem with map loading sequence on servers.
	* Made network disconnection asynchronous.
	* Fixed a problem with the server list on computers without internet connection.
	* Added checkbox control to GUI (tag //check//).
	* Revamped GSS parser.
	* Corrected window mouse focusing order.
	* Made master server register server port number.
	* Added some ammo syncing to reduce problems with clients wrongly thinking they're out of ammo.
	* Made gusanos unload the level and other things when the server disconnects.
	* Fixed a memory leak with explosions.
	* Added mod listing and mod tab-completion.
	* Fixed weapon switching when number of selected weapons is less than the max.
	* Made animators favour accuracy over performance.
	* Added lua distortion and light generator support (and deprecated the old system).
	* Added dark_mode variable to level config and removed vid_dark_mode console variable.
	* Master server only lists servers with the same version as you.
	* Made line_to_origin obey blender mode even without wu_pixels on.
	* Fixed the bug that let you add bots with the //addbot// command on the network game client.
	* Optimized the occluded sprites and lights so that they dont render if they cant be seen.
	* Made the console image and the bitmap fonts not hardcoded to bmp format

	* Improved lua bindings:
		* Callbacks:
			* bindings.gameEnded
			* bindings.gameNetworkInit
			* bindings.playerRemoved